--- a/studenthub-backend/package.json
+++ b/studenthub-backend/package.json
@@ -19,6 +19,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
+    "test:e2e:auth": "jest --config ./test/jest-e2e.json --testPathPattern=auth",
     "db:generate": "prisma generate",
     "db:migrate": "prisma migrate dev",
     "db:migrate:prod": "prisma migrate deploy",
@@ -91,12 +92,12 @@
     "@types/express": "^4.17.22",
     "@types/jest": "^29.5.12",
     "@types/multer": "^1.4.11",
-    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.13.0",
     "@types/nodemailer": "^6.4.15",
     "@types/passport-jwt": "^3.0.10",
     "@types/passport-local": "^1.0.38",
     "@types/qrcode": "^1.5.5",
+    "@types/bcryptjs": "^2.4.6",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^7.10.0",
     "@typescript-eslint/parser": "^7.10.0",
