--- a/studenthub-backend/package.json
+++ b/studenthub-backend/package.json
@@ -84,6 +84,7 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@faker-js/faker": "^10.2.0",
     "@nestjs/cli": "^10.3.2",
     "@nestjs/schematics": "^10.1.1",
     "@types/bcryptjs": "^2.4.6",
