--- a/studenthub-backend/nginx/nginx.conf
+++ b/studenthub-backend/nginx/nginx.conf
@@ -4,7 +4,7 @@ error_log /var/log/nginx/error.log warn;
 pid /var/run/nginx.pid;
 
 events {
-    worker_connections 1024;
+    worker_connections 4096;
     use epoll;
     multi_accept on;
 }
@@ -65,6 +65,39 @@ http {
     server {
         listen 80;
         server_name localhost;
+
+        # Обработка корневого пути - возвращаем информацию об API
+        location = / {
+            log_not_found off;
+            return 200 '{"message":"StudentHub API","version":"1.0","endpoints":{"health":"/api/health","api":"/api/"}}';
+            add_header Content-Type application/json;
+        }
+
+        # Обработка favicon.ico - убираем ошибки из логов
+        location = /favicon.ico {
+            access_log off;
+            log_not_found off;
+            return 204;
+            add_header Content-Length 0;
+        }
+
+        # Обработка запросов .well-known (Chrome DevTools и другие)
+        # Убирает ошибки из логов для несуществующих файлов
+        # Используем точное совпадение для максимального приоритета
+        location = /.well-known/appspecific/com.chrome.devtools.json {
+            access_log off;
+            log_not_found off;
+            return 200 "";
+            add_header Content-Type text/plain;
+        }
+        
+        # Общий location для всех .well-known запросов
+        location ~ ^/.well-known/ {
+            access_log off;
+            log_not_found off;
+            return 200 "";
+            add_header Content-Type text/plain;
+        }
 
         # Health check endpoint для Load Balancer
         location /nginx-health {
