--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
     branches: [main, develop]
 
 env:
-  NODE_VERSION: '18.x'
+  NODE_VERSION: '20.x'
 
 jobs:
   lint:
@@ -52,6 +52,11 @@ jobs:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
           cache-dependency-path: studenthub-backend/package-lock.json
+
+      - name: Clear npm cache (fix permissions)
+        run: |
+          sudo rm -rf ~/.npm
+          sudo rm -rf /root/.npm
 
       - name: Install dependencies
         working-directory: ./studenthub-backend
@@ -108,6 +113,11 @@ jobs:
           cache: 'npm'
           cache-dependency-path: studenthub-backend/package-lock.json
 
+      - name: Clear npm cache (fix permissions)
+        run: |
+          sudo rm -rf ~/.npm
+          sudo rm -rf /root/.npm
+
       - name: Install dependencies
         working-directory: ./studenthub-backend
         run: npm ci
@@ -158,6 +168,11 @@ jobs:
           cache: 'npm'
           cache-dependency-path: studenthub-backend/package-lock.json
 
+      - name: Clear npm cache (fix permissions)
+        run: |
+          sudo rm -rf ~/.npm
+          sudo rm -rf /root/.npm
+
       - name: Install dependencies
         working-directory: ./studenthub-backend
         run: npm ci
@@ -181,6 +196,11 @@ jobs:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
           cache-dependency-path: studenthub-backend/package-lock.json
+
+      - name: Clear npm cache (fix permissions)
+        run: |
+          sudo rm -rf ~/.npm
+          sudo rm -rf /root/.npm
 
       - name: Install dependencies
         working-directory: ./studenthub-backend
