--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ on:
       - 'v*'
 
 env:
-  NODE_VERSION: '18.x'
+  NODE_VERSION: '20.x'
 
 jobs:
   deploy-staging:
@@ -28,6 +28,11 @@ jobs:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
           cache-dependency-path: studenthub-backend/package-lock.json
+
+      - name: Clear npm cache (fix permissions)
+        run: |
+          sudo rm -rf ~/.npm
+          sudo rm -rf /root/.npm
 
       - name: Install dependencies
         working-directory: ./studenthub-backend
@@ -64,6 +69,11 @@ jobs:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
           cache-dependency-path: studenthub-backend/package-lock.json
+
+      - name: Clear npm cache (fix permissions)
+        run: |
+          sudo rm -rf ~/.npm
+          sudo rm -rf /root/.npm
 
       - name: Install dependencies
         working-directory: ./studenthub-backend
