--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -18,9 +18,14 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18.x'
+          node-version: '20.x'
           cache: 'npm'
           cache-dependency-path: studenthub-backend/package-lock.json
+
+      - name: Clear npm cache (fix permissions)
+        run: |
+          sudo rm -rf ~/.npm
+          sudo rm -rf /root/.npm
 
       - name: Install dependencies
         working-directory: ./studenthub-backend
