--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,23 +53,30 @@ jobs:
           cache: 'npm'
           cache-dependency-path: studenthub-backend/package-lock.json
 
-      - name: Clear npm cache (fix permissions)
+      - name: Fix npm cache permissions
         run: |
           sudo rm -rf ~/.npm
           sudo rm -rf /root/.npm
+          mkdir -p ~/.npm
+          sudo chown -R $USER:$USER ~/.npm || true
 
       - name: Install dependencies
         working-directory: ./studenthub-backend
-        run: npm ci
+        env:
+          npm_config_cache: ~/.npm
+        run: npm ci --prefer-offline=false
 
       - name: Generate Prisma Client
         working-directory: ./studenthub-backend
         run: npm run db:generate
         env:
           DATABASE_URL: postgresql://postgres:postgres@localhost:5432/studenthub_test
+          npm_config_cache: ~/.npm
 
       - name: Build project
         working-directory: ./studenthub-backend
+        env:
+          npm_config_cache: ~/.npm
         run: npm run build
 
   test:
@@ -113,14 +120,18 @@ jobs:
           cache: 'npm'
           cache-dependency-path: studenthub-backend/package-lock.json
 
-      - name: Clear npm cache (fix permissions)
+      - name: Fix npm cache permissions
         run: |
           sudo rm -rf ~/.npm
           sudo rm -rf /root/.npm
+          mkdir -p ~/.npm
+          sudo chown -R $USER:$USER ~/.npm || true
 
       - name: Install dependencies
         working-directory: ./studenthub-backend
-        run: npm ci
+        env:
+          npm_config_cache: ~/.npm
+        run: npm ci --prefer-offline=false
 
       - name: Generate Prisma Client
         working-directory: ./studenthub-backend
@@ -133,6 +144,7 @@ jobs:
         run: npm run db:migrate:prod
         env:
           DATABASE_URL: postgresql://postgres:postgres@localhost:5432/studenthub_test
+          npm_config_cache: ~/.npm
 
       - name: Run tests
         working-directory: ./studenthub-backend
@@ -144,6 +156,7 @@ jobs:
           REDIS_PORT: 6379
           JWT_SECRET: test-secret-key-for-ci
           JWT_REFRESH_SECRET: test-refresh-secret-key-for-ci
+          npm_config_cache: ~/.npm
 
       - name: Upload coverage reports
         uses: codecov/codecov-action@v3
@@ -168,17 +181,23 @@ jobs:
           cache: 'npm'
           cache-dependency-path: studenthub-backend/package-lock.json
 
-      - name: Clear npm cache (fix permissions)
+      - name: Fix npm cache permissions
         run: |
           sudo rm -rf ~/.npm
           sudo rm -rf /root/.npm
+          mkdir -p ~/.npm
+          sudo chown -R $USER:$USER ~/.npm || true
 
       - name: Install dependencies
         working-directory: ./studenthub-backend
-        run: npm ci
+        env:
+          npm_config_cache: ~/.npm
+        run: npm ci --prefer-offline=false
 
       - name: Run npm audit
         working-directory: ./studenthub-backend
+        env:
+          npm_config_cache: ~/.npm
         run: npm audit --audit-level=moderate
         continue-on-error: true
 
@@ -197,15 +216,21 @@ jobs:
           cache: 'npm'
           cache-dependency-path: studenthub-backend/package-lock.json
 
-      - name: Clear npm cache (fix permissions)
+      - name: Fix npm cache permissions
         run: |
           sudo rm -rf ~/.npm
           sudo rm -rf /root/.npm
+          mkdir -p ~/.npm
+          sudo chown -R $USER:$USER ~/.npm || true
 
       - name: Install dependencies
         working-directory: ./studenthub-backend
-        run: npm ci
+        env:
+          npm_config_cache: ~/.npm
+        run: npm ci --prefer-offline=false
 
       - name: Type check
         working-directory: ./studenthub-backend
+        env:
+          npm_config_cache: ~/.npm
         run: npx tsc --noEmit
