--- a/.github/workflows/dependabot-auto-merge.yml
+++ b/.github/workflows/dependabot-auto-merge.yml
@@ -21,22 +21,30 @@ jobs:
           cache: 'npm'
           cache-dependency-path: studenthub-backend/package-lock.json
 
-      - name: Clear npm cache (fix permissions)
+      - name: Fix npm cache permissions
         run: |
           sudo rm -rf ~/.npm
           sudo rm -rf /root/.npm
+          mkdir -p ~/.npm
+          sudo chown -R $USER:$USER ~/.npm || true
 
       - name: Install dependencies
         working-directory: ./studenthub-backend
-        run: npm ci
+        env:
+          npm_config_cache: ~/.npm
+        run: npm ci --prefer-offline=false
 
       - name: Run lint check
         working-directory: ./studenthub-backend
+        env:
+          npm_config_cache: ~/.npm
         run: npm run lint:check
         continue-on-error: true
 
       - name: Run build
         working-directory: ./studenthub-backend
+        env:
+          npm_config_cache: ~/.npm
         run: npm run build
         continue-on-error: true
 
