--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,17 +29,23 @@ jobs:
           cache: 'npm'
           cache-dependency-path: studenthub-backend/package-lock.json
 
-      - name: Clear npm cache (fix permissions)
+      - name: Fix npm cache permissions
         run: |
           sudo rm -rf ~/.npm
           sudo rm -rf /root/.npm
+          mkdir -p ~/.npm
+          sudo chown -R $USER:$USER ~/.npm || true
 
       - name: Install dependencies
         working-directory: ./studenthub-backend
-        run: npm ci
+        env:
+          npm_config_cache: ~/.npm
+        run: npm ci --prefer-offline=false
 
       - name: Build project
         working-directory: ./studenthub-backend
+        env:
+          npm_config_cache: ~/.npm
         run: npm run build
 
       - name: Deploy to staging
@@ -70,17 +76,23 @@ jobs:
           cache: 'npm'
           cache-dependency-path: studenthub-backend/package-lock.json
 
-      - name: Clear npm cache (fix permissions)
+      - name: Fix npm cache permissions
         run: |
           sudo rm -rf ~/.npm
           sudo rm -rf /root/.npm
+          mkdir -p ~/.npm
+          sudo chown -R $USER:$USER ~/.npm || true
 
       - name: Install dependencies
         working-directory: ./studenthub-backend
-        run: npm ci
+        env:
+          npm_config_cache: ~/.npm
+        run: npm ci --prefer-offline=false
 
       - name: Build project
         working-directory: ./studenthub-backend
+        env:
+          npm_config_cache: ~/.npm
         run: npm run build
 
       - name: Deploy to production
