--- a/.github/workflows/dependabot-auto-merge.yml
+++ b/.github/workflows/dependabot-auto-merge.yml
@@ -25,26 +25,25 @@ jobs:
         run: |
           sudo rm -rf ~/.npm
           sudo rm -rf /root/.npm
-          mkdir -p ~/.npm
-          sudo chown -R $USER:$USER ~/.npm || true
+          mkdir -p ./studenthub-backend/.npm-cache
 
       - name: Install dependencies
         working-directory: ./studenthub-backend
         env:
-          npm_config_cache: ~/.npm
-        run: npm ci --prefer-offline=false
+          npm_config_cache: ${{ github.workspace }}/studenthub-backend/.npm-cache
+        run: npm ci --cache .npm-cache
 
       - name: Run lint check
         working-directory: ./studenthub-backend
         env:
-          npm_config_cache: ~/.npm
+          npm_config_cache: ${{ github.workspace }}/studenthub-backend/.npm-cache
         run: npm run lint:check
         continue-on-error: true
 
       - name: Run build
         working-directory: ./studenthub-backend
         env:
-          npm_config_cache: ~/.npm
+          npm_config_cache: ${{ github.workspace }}/studenthub-backend/.npm-cache
         run: npm run build
         continue-on-error: true
 
